--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,12 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.3)
+    ),
+    url("../public/pexels-padrinan-255379.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
