--- a/src/components/formInput.css
+++ b/src/components/formInput.css
@@ -15,3 +15,14 @@ label {
   font-size: 12px;
   color: gray;
 }
+
+span {
+  font-size: 12px;
+  color: red;
+  padding: 3px;
+  display: none;
+}
+
+input:invalid ~ span {
+  display: block;
+}
